--- a/index.html
+++ b/index.html
@@ -3,46 +3,45 @@
 <head>
 <title> portda.html </title>
 <meta charset="utf-8">
-
-<link  rel=stylesheet  href=patata.css>
+<link  rel=stylesheet  href=index.css>
 </head>
 <body>
+<h1 align="center" class=intento>Portada de Lino</h1>
 
-<h1>portada de lino</1>
+<p><h2>Bienvenidos a mi portada mas cutre &#128517;</h2></P>
 
-<p>bienvenidos a mi aqui se se hara el simulacro de examen para aprobar....TENGO MIEDO &#128517;</P>
 <table>
-<tbody>
+<tbody class=intento4>
 <tr>
-<td>-------</td>
-<td>-------</td>
-<td>-------</td>
+<td>Mi blog</td>
+<td>Mi editor</td>
+<td>El blog profesora</td>
 </tr>
 <tr>
-<td>><a href="https://sabiinfor.wordpress.com"/>sabiinfor</a></td>
-<td><a href="https://sabiinfor.wordpress.com/wp-admin" />editor</a></td>
-<td><a href="https://irocho.wordpress.com"/><img src="irocho.png"/></a></td>
+<td>><a href="https://sabiinfor.wordpress.com"/>Sabiinfor</a></td>
+<td><a href="https://sabiinfor.wordpress.com/wp-admin" />Editor</a></td>
+<td><a href="https://irocho.wordpress.com"/><img src="clase.png"/></a></td>
 </tr>
 </tbody>
 </table>
-<ol>
+<ol> Mas trabajos
+<li><a href=https://lino1997.github.io/formulrio/ />formulario</a></li>
+<li><a href=https://lino1997.github.io/turismo/ />turismo</a></li>
+<li><a href=https://lino1997.github.io/analizar/ />analizar</a></li>
+<li><a href=https://lino1997.github.io/clases/ />clases</a></li>
+</ol>
+
+<ol class=div>
 <li><a href="https://www.youtube.com"/>youtube</a></li>
 <li><a href="https://www.callofduty.com/mobile"/>cod</a></li>
 <li><a href="https://twitter.com"/>twitter</a></li>
 <li><a href="https://tmofans.com"/>manga</a></li>
 </ol>
-<!-- Búsqueda Google -->
-<center>
-<FORM method=GET action="http://www.google.com/search">
-<TABLE bgcolor="#FFFFFF"><tr><td>
-<A HREF="http://www.google.com/">
-<IMG SRC="http://www.google.com/logos/Logo_40wht.gif" border="0" ALT="Google" align="absmiddle"></A>
-<INPUT TYPE=text name=q size=31 maxlength=255 value="">
-<INPUT TYPE=hidden name=hl value=es>
-<INPUT type=submit name=btnG VALUE="Búsqueda Google">
-</td></tr></TABLE>
-</FORM>
-</center>
-<!-- Búsqueda Google -->
-</body>
-</html>
+<figure>
+ <a href="https://typemoon.fandom.com/wiki/Illyasviel_von_Einzbern_(Fate/kaleid)#Fate/kaleid%20liner%20%E2%96%BE=@"><img src=illya.png></a>
+  <figcaption>Illya</figcaption>
+ <a href="https://typemoon.fandom.com/wiki/Chloe_von_Einzbern"><img src=kuro.png></a>
+   <figcaption>kuro</figcaption>
+   <a href="https://typemoon.fandom.com/wiki/Miyu_Edelfelt"><img src=miyu.png></a>
+   <figcaption>Miyu</figcaption>
+ </figure>
