--- a/index.html
+++ b/index.html
@@ -45,3 +45,17 @@
    <a href="https://typemoon.fandom.com/wiki/Miyu_Edelfelt"><img src=miyu.png></a>
    <figcaption>Miyu</figcaption>
  </figure>
+<!-- Búsqueda Google -->
+<center>
+<FORM method=GET action="http://www.google.com/search">
+<TABLE bgcolor="#FFFFFF"><tr><td>
+<A HREF="http://www.google.com/">
+<IMG SRC="http://www.google.com/logos/Logo_40wht.gif" border="0" ALT="Google" align="absmiddle"></A>
+<INPUT TYPE=text name=q size=31 maxlength=255 value="">
+<INPUT TYPE=hidden name=hl value=es>
+<INPUT type=submit name=btnG VALUE="Búsqueda Google">
+</td></tr></TABLE>
+</FORM>
+</center>
+<!-- Búsqueda Google -->
+ </html>
