--- a/index.html
+++ b/index.html
@@ -38,14 +38,15 @@
 <li><a href="https://tmofans.com"/>manga</a></li>
 </ol>
 <figure>
- <a href="https://typemoon.fandom.com/wiki/Illyasviel_von_Einzbern_(Fate/kaleid)#Fate/kaleid%20liner%20%E2%96%BE=@"><img src=illya.png></a>
+ <a href="https://typemoon.fandom.com/wiki/Illyasviel_von_Einzbern_(Fate/kaleid)#Fate/kaleid%20liner%20%E2%96%BE=@"><img src="https://lino1997.github.io/clases/illya.png"
+></a>
   <figcaption>Illya</figcaption>
  <a href="https://typemoon.fandom.com/wiki/Chloe_von_Einzbern"><img src=kuro.png></a>
    <figcaption>kuro</figcaption>
    <a href="https://typemoon.fandom.com/wiki/Miyu_Edelfelt"><img src=miyu.png></a>
    <figcaption>Miyu</figcaption>
  </figure>
-<!-- Búsqueda Google -->
+ <!-- Búsqueda Google -->
 <center>
 <FORM method=GET action="http://www.google.com/search">
 <TABLE bgcolor="#FFFFFF"><tr><td>
@@ -58,4 +59,4 @@
 </FORM>
 </center>
 <!-- Búsqueda Google -->
- </html>
+</html>
