--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 <li><a href=https://lino1997.github.io/analizar/ />analizar</a></li>
 <li><a href=https://lino1997.github.io/clases/ />clases</a></li>
 <li><a href=https:lino1997.github.io/tarxetas-master/ />Tarxetas</a></li>
+<li><a href=https:lino1997.github.io/recetas/ />recetas</a></li>
 </ol>
 
 <ol class=div>
